Fixed logo spacing

--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ section {
 
 #sticky-nav-logo {
   display: flex;
-  margin-left: 20px;
+  margin-left: 15%;
   width: 60px;
 }
 
